module/core/derive_tools/tests/inc/index/compiletime/struct_no_attrs.rs
use derive_tools::Index;

#[ derive( Index ) ] 
#[ index () ]
struct StructMultipleNamed< T > 
{
  a : Vec< T >,
  b : Vec< T >,
}

fn main()
{  
}

